app/assets/stylesheets/show.css
:root {
    --container-background: rgb(255, 255, 255);
    --border-radius-container: 0.3rem;
    --main-color: #1D84B5;
}

.shadow {
    -webkit-box-shadow: 9px 13px 75px -11px rgba(0,0,0,0.75);
    -moz-box-shadow: 9px 13px 75px -11px rgba(0,0,0,0.75);
    box-shadow: 9px 13px 75px -11px rgba(0,0,0,0.75);
}

/* Donation-Show */
.no-image {
    -webkit-user-drag: none;
    -khtml-user-drag: none;
    -moz-user-drag: none;
    -o-user-drag: none;
    height: 22rem;
    width: 22rem;
}

.container {
    display: flex;
    margin-top: 1rem;
    width: 95%;
    margin-left: 2rem;
    border-collapse: collapse;
    align-items: stretch;
    flex

}

.photo-container {
    background-color: var(--container-background);
    padding-top: 3rem;
    flex-grow: 1;
    padding-bottom: 2rem;
    justify-content: center;
    align-items: center;
    width: 50%;
    flex-wrap: wrap;
    border-right: solid 1px #EAEBED;
    border-radius: var(--border-radius-container);
    height: 27rem;  
    display: flex;
    flex-direction: column;
    overflow-y: auto;
    overflow-x: auto;
}

.photo {
    -webkit-box-shadow: 9px 13px 75px -11px rgba(0,0,0,0.75);
    -moz-box-shadow: 9px 13px 75px -11px rgba(0,0,0,0.75);
    box-shadow: 9px 13px 75px -11px rgba(0,0,0,0.75);
    margin: 0 0 1rem 1rem;
    border-radius: 1.1rem;
    flex-grow: 1;
    -webkit-user-drag: none;
    -khtml-user-drag: none;
    -moz-user-drag: none;
    -o-user-drag: none;
    width: 34rem;
    /* height: 30rem; */
    /* height: 30%; */
}

.container-infos {
    display: flex;
    width: 50%;
    flex-direction: column;
    font-family: 'Source Sans Pro', sans-serif;
    padding-left: 3.5rem;
    padding-top: 3rem;
    background-color: var(--container-background);
    border-radius: var(--border-radius-container);
    padding-right: 1.5rem;
    height: 27rem;  
    overflow: auto;
}

.title-donation {
    font-size: 3rem;
    margin: 0;
    margin-bottom: 1rem;
    line-height: normal;
}

.infos-donation {
    margin: 0;
    margin-bottom: 0.5rem;
    font-size: 1.1rem;
    font-style: italic;
    
}

.description {
    line-height: 1.3rem;
}

/* Donation-User */

p {
    margin: 0;
}

.user-show-container {
    width: 25rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border: 0.15rem solid var(--main-color);
    margin: 2rem auto 2rem auto;
    border-radius: var(--border-radius-container);
    font-family: 'Montserrat', sans-serif;
}

.icon {
    color: var(--main-color);
    font-size: 10rem!important;
}

.user-show-title {
    color: var(--main-color);
    font-size: 2.5rem;
    margin-bottom: 1rem;
}

.information {
    width: 75%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    font-size: 1rem;
    margin-top: 1rem;
}

.edit-user-button {
    margin-top: 1rem;
    margin-bottom: 1rem;
    border: 0.1rem solid var(--main-color);
    padding: 0.5rem;
    border-radius: 1rem;
    text-decoration: none;
}

